qubole-aws-terraform-deployment/qubole-deployment/modules/network_infrastucture/aws_eip_qubole_vpc_nat_gw.tf
/*
Creates a Elastic IP address for
 1. The NAT Gateway running in the public subnet of the Qubole dedicated VPC
*/
resource "aws_eip" "qubole_dedicated_vpc_nat_gw_eip" {
  domain   = "vpc"
  tags = {
    Name = "qubole_dedicated_vpc_nat_gw_eip_${var.deployment_suffix}"
  }
}
